# clicker-mac

./: CMakeLists.txt  README.md  imgui.ini  run.sh
src/: apple_hardware.cpp  apple_hardware.hpp  examples.cpp  examples.hpp  global.h  global.hpp  init.cpp  init.h  main.cpp  mouse.cpp  mouse.h  queue.cpp  queue.hpp  ui_windows.cpp  ui_windows.hpp  window_input.cpp  window_input.h  window_input.hpp
